# ooc

./: CMakeLists.txt
lib/base/include/: base.h  ooc_base.h
lib/base/src/: clone.c  delete.c  differ.c  new.c  typeOf.c
lib/list/include/: ooc_itr.h  ooc_list.h  ooc_list.h~
lib/list/src/: gen.sh  itr.c  list.c  list_get_user_data.c  list_get_user_data.code_begin  list_get_user_data.code_end
lib/string/include/: ooc_string.h  string.h
lib/string/src/: string.c
test/: main.c
tests/: list.c  main.c  string.c  test.h
